--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
 database_uri=localhost
 database_port=27017
 database_name=pscdcl
+resource_server_url="https://resource-server.iudx.org.in"
+resource_server_admin_key="uAJKvPPmCBSYJvOabHElrbCdHOqBXH7X"
