--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 database_user=root
-database_password=password
+database_password=
 database_host=localhost
 database_port=27017
 database_name=pscdcl
 resource_server_url="https://resource-server.iudx.org.in"
-resource_server_admin_key="uAJKvPPmCBSYJvOabHElrbCdHOqBXH7X"
+resource_server_admin_key=
