--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,16 @@
 		<dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
-		    <version>3.8.1</version>
+		    <version>4.12</version>
 		    <scope>test</scope>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-unit</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+		</dependency>
+        <dependency>
 		    <groupId>io.vertx</groupId>
 		    <artifactId>vertx-mongo-client</artifactId>
 		    <version>3.6.3</version>
@@ -59,6 +65,11 @@
 		    <artifactId>guava</artifactId>
 		    <version>27.0.1-jre</version>
 		</dependency>
+        <dependency>
+         <groupId>io.vertx</groupId>
+         <artifactId>vertx-web-client</artifactId>
+         <version>3.8.2</version>
+        </dependency>
 	</dependencies>
 	
 	<build>
