--- a/config.properties
+++ b/config.properties
@@ -8,6 +8,9 @@ resource_server_url=
 resource_server_admin_key=
 keystore=
 keystorePassword=
+authKeystore=
+authKeystorePassword=
+authUrl=
 truststore=
 truststorePassword=
 hiddenitems=
